
Version 2.0.5
 * Fixed bug: prevent leaking of file descriptors on a timeout (unconfirmed problem).
 * Fixed bug: variables in field values in upload_set_form_field and
   upload_aggregate_form_field directives were not working if field name
   contained 0 variables. 

Version 2.0.4
 * Fixed bug: location configuration of upload_set_form_field and upload_pass_form_field
   was not inheritable from server configuration.
 * Added feature: directive upload_aggregate_form_field to pass aggragate properties
   of a file like file size, MD5 and SHA1 sums to backend.
 * Fixed bug: missing CRLF at the end of resulting body.
 * Change: optimized out some unnecessary memory allocations and zeroing.

Version 2.0.3
 * upload_store directive was not able to receive more than one argument.
   As a result no hashed dirs for file uploads were possible.
 * upload_store_access directive did not work at all. Permissions were
   defaulted to user:rw. Thanks to Brian Moran.
 * In case of any errors at the last chunk of request body only 500 Internal Server Error
   was generated intead of 400 Bad Request and 503 Service Unavailable.
 * Fixed copyrights for temporary file name generation code
 * Fixed compilation issue on 0.6.32. Thanks to Tomas Pollak.
 * Added directive upload_pass_form_field to specify fields
   to pass to backend. Fixes security hole found by Brian Moran.

Version 2.0.2
 * Fixed crash in logging filename while aborting upload
 * Added feasible debug logging
 * Added support for variables to generate form fields
   in resulting request body
 * Added missing logging of errno after write failures
 * Simplified upload abortion logic; simply discarding
   already added fields
 * Now returning explicit error code after script failures
   to be able to generate Internal server error